<resources>
    <string name="app_name">HoopyTaskBySanjeev</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="username">Usename</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="this_app_need_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="select_action">Select Action</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">cancel</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="insert_new_user">Insert New User</string>
    <string name="fetch_user">Fetch User</string>
    <string name="update_user">Update User</string>
    <string name="you_can_find_update_user_in_fetch_user_module">You can find UPDATE USER in Fetch User Module.</string>
    <string name="validationUsername">Please Enter name,email or username</string>
    <string name="enter_valid_no">Enter Valid Phone Number</string>
    <string name="something_went_wrong">Something Went Wrong.!</string>
    <string name="please_click_back_again">Please Click Back Again.</string>
    <string name="crud">Crud</string>
    <string name="hoopy_task_by_sanjeev">Hoopy Task By Sanjeev</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="please_enter_your_email">Please Enter Your Email ID</string>
    <string name="please_enter_valid_email">Please Enter a Valid Email ID</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="select_image">Please Select a Image to upload</string>
    <string name="server_error">Server Error</string>
    <string name="cant_load_image">Can\'t Load Upload Image API</string>

</resources>
