<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".fragments.FragmentCRUD">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ltCrud"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:id="@+id/btnInsert"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/insert_new_user"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:text="Or"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnFetch"
            android:layout_width="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:text="@string/fetch_user"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_below="@+id/ltCrud"
        android:layout_toRightOf="@id/ltCrud"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:text="@string/you_can_find_update_user_in_fetch_user_module"
        android:layout_height="wrap_content" />
</RelativeLayout>
</layout>